Macro/skim/logs/19545448_4.err
input_line_9:2:35: error: expected expression
 FlatMix(4*100000, (4+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                  ^
